<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textColor="@color/colorForeground"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textColor="@color/colorForeground"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_instructions" />

    <TextView
        android:id="@+id/tv_stats_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/all_time_stats"
        android:textColor="@color/colorForeground"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/tv_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Win: 0 Draw: 0 Lose: 0"
        android:textColor="@color/colorForeground"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_stats_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:clipToPadding="true"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/rock" />

        <ImageButton
            android:id="@+id/btn_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/paper" />

        <ImageButton
            android:id="@+id/btn_scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/scissors" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_computer"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="233dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:cropToPadding="true"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/tv_vs"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/iv_computer2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="232dp"
        android:background="@color/colorPrimary"
        android:cropToPadding="true"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/tv_vs"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/scissors" />

    <TextView
        android:id="@+id/tv_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="Winner"
        android:textColor="@color/colorForeground"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_stats" />

    <TextView
        android:id="@+id/tv_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="casual"
        android:text="@string/vs"
        android:textColor="@color/colorForeground"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_winner" />

    <TextView
        android:id="@+id/tv_cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:text="@string/computer"
        android:textAlignment="textStart"
        android:textColor="@color/colorForeground"
        app:layout_constraintEnd_toStartOf="@+id/tv_vs"
        app:layout_constraintTop_toBottomOf="@+id/iv_computer" />

    <TextView
        android:id="@+id/tv_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/you"
        android:textAlignment="textStart"
        android:textColor="@color/colorForeground"
        app:layout_constraintStart_toEndOf="@+id/tv_vs"
        app:layout_constraintTop_toBottomOf="@+id/iv_computer2" />
</androidx.constraintlayout.widget.ConstraintLayout>