<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="TextView"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_results" />

    <TextView
        android:id="@+id/tv_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="casual"
        android:text="@string/vs"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <ImageView
        android:id="@+id/iv_computer"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:cropToPadding="true"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_vs"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/tv_computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="26dp"
        android:text="@string/computer"
        app:layout_constraintEnd_toStartOf="@+id/tv_vs"
        app:layout_constraintTop_toBottomOf="@+id/iv_computer" />

    <ImageView
        android:id="@+id/iv_player"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:cropToPadding="true"
        android:padding="5dp"
        app:layout_constraintStart_toEndOf="@+id/tv_vs"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/tv_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="7dp"
        android:text="@string/you"
        app:layout_constraintStart_toEndOf="@+id/tv_vs"
        app:layout_constraintTop_toBottomOf="@+id/iv_player" />
</androidx.constraintlayout.widget.ConstraintLayout>